nginx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-headers
  namespace: default
spec:
  headers:
    customResponseHeaders:
      X-Served-By: "testelchin-k3s-amsterdam"
